can now edit profile without needing to change image still need to make image upload instantaneously visable

--- a/bruinmatch-frontend/src/components/EditProfile.module.css
+++ b/bruinmatch-frontend/src/components/EditProfile.module.css
@@ -1899,6 +1899,8 @@
     left: 720px;
     top: 137px;
   
-    background: url(https://samueli.ucla.edu/wp-content/uploads/samueli/Paul-Eggert_time_zone.png);
+    /*background: url(https://samueli.ucla.edu/wp-content/uploads/samueli/Paul-Eggert_time_zone.png);
+  */
   }
+
   
