--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -1,28 +1,34 @@
 .card-container {
-  width: 700px;
-  height: 400px;
+  /* width: 700px;
+  height: 400px; */
+  width: 103%;
+  height: 105%;
+
   border: 3px solid #2774ae;
-  margin: 0 auto;
+  margin: 1% auto;
   border-radius: 50px;
   overflow: hidden;
+  /* padding: 5% 5%; */
   padding-left: 40px;
   padding-top: 33px;
+  /* padding-left: 5%; */
+  /* padding-top: 1%; */
 }
 
-.TopBanner {
+/* .TopBanner {
   position: absolute;
   width: 1920px;
   height: 94px;
   left: 0px;
   top: 0px;
   background: #2774ae;
-}
+} */
 
-.topBannerText {
-  position: absolute;
-  width: 295px;
-  height: 56px;
-  left: 24px;
+/* .topBannerText {
+  position: absolute; */
+/* width: 295px;
+  height: 56px; */
+/* left: 24px;
   top: 19px;
 
   font-family: "Ubuntu";
@@ -31,11 +37,12 @@
   font-size: 48px;
   line-height: 55px;
   /* identical to box height */
-  text-align: center;
+/* text-align: center;
   letter-spacing: 0.05em;
 
-  color: #ffffff;
-}
+  color: #ffffff; */
+/* } */
+
 .list {
   display: grid;
   margin: 10px 0 50px 0;
@@ -118,14 +125,14 @@
   background: #c1e4ff;
 }
 
-.ProfilePhoto1{
+.ProfilePhoto1 {
   border-radius: 50%;
-  display: inline-block; 
+  display: inline-block;
   margin-bottom: -200;
-  position: relative; 
-  width: 200px; 
+  position: relative;
+  width: 200px;
   height: 200px;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .desc {
