--- a/bruinmatch-frontend/src/components/SignUp.module.css
+++ b/bruinmatch-frontend/src/components/SignUp.module.css
@@ -11,8 +11,8 @@
   background-color: #efefef;
   min-height: 100vh;
   color: white;
-  top: 0px;
-  height: 3000px;
+  top: 0%;
+  height: 187.5%;
 }
 .FullFrame {
   background-color: #efefef;
@@ -35,18 +35,18 @@
 
 .TopBanner {
   position: absolute;
-  width: 1920px;
-  height: 94px;
+  width: 100%;
+  height: 5.875%;
   left: 0px;
   top: 0px;
   background: #2774ae;
 }
 .topBannerText {
   position: absolute;
-  width: 295px;
-  height: 56px;
-  left: 24px;
-  top: 19px;
+  width: 11.523%;
+  height: 3.5%;
+  left: 0.9375%;
+  top: 1.1875%;
 
   font-family: "Ubuntu";
   font-style: normal;
@@ -234,9 +234,9 @@ color: rgba(39, 116, 174, 0.53);*/
 .Frame2 {
   position: absolute;
   /*width: 1303px;*/
-  height: 1019px;
-  left: 310px;
-  top: 1203px;
+  height: 63.68%;
+  left:15.11%;
+  top: 105.189%;
   background-color: #efefef;
 }
 
@@ -1033,10 +1033,10 @@ color: rgba(39, 116, 174, 0.53);*/
 
 .Frame3 {
   position: absolute;
-  width: 1330px;
-  height: 817px;
-  left: 295px;
-  top: 2600px;
+  width: 51.95%;
+  height: 91.06%;
+  left: 14.52%;
+  top:237.5%;
 }
 
 /* Rectangle 29*/
@@ -1663,10 +1663,10 @@ color: rgba(82, 82, 82, 0.62);
 
 .Frame4 {
   position: absolute;
-  width: 1303px;
-  height: 1721px;
-  left: 310px;
-  top: 852px;
+  width: 70.1%;
+  height: 163%;
+  left: 15.11%;
+  top: 71.5%;
   background-color: #efefef;
 }
 
