--- a/bruinmatch-frontend/src/components/login.module.css
+++ b/bruinmatch-frontend/src/components/login.module.css
@@ -1,17 +1,17 @@
 .container {
-    background-color: #2774AE;
-    min-height: 100vh;
-    color: white;
-    /* max-width: 1435px; */
-    /* margin: 0; */
-    width: 100%;
-    margin: auto;
-    zoom: 1.35;
-    
-  }
+  background-color: #2774AE;
+  min-height: 100vh;
+  color: white;
+  /* max-width: 1435px; */
+  /* margin: 0; */
+  width: 100%;
+  margin: auto;
+  zoom: 1.35;
+ 
+}
 
 .topRectangle {
-    /* Rectangle 2 */
+  /* Rectangle 2 */
 position: relative;
 /* width: 1920px; or 1435 */
 width: 100%;
@@ -60,24 +60,23 @@ color: #2774AE;
 
 .imageBanner {
 
-    /* test123 1 */
-  
-  position: absolute;
-  width: 100%;
-  height: 500px;
-  left: 0px;
-  top: 176px;
-  /* max-width: 1445px; */
+  /* test123 1 */
+ position: absolute;
+width: 100%;
+height: 500px;
+left: 0px;
+top: 176px;
+/* max-width: 1445px; */
 }
 
-img{ 
-    max-width: 100%;
-    opacity: 0.7;
+img{
+  max-width: 100%;
+  opacity: 0.7;
 }
 
 .imageText {
 
-    /* Main Banner */
+  /* Main Banner */
 
 /* position: absolute;
 width: 100%;
@@ -101,7 +100,7 @@ background-color: #2774AE;
 }
 
 .points{
-    /* Point 1 */
+  /* Point 1 */
 
 position: absolute;
 /*width: 399px;
@@ -109,7 +108,7 @@ height: 70px;
 
 */
 
-top: 728px; 
+top: 728px;
 padding-left: 80px;
 padding-top: 15px;
 padding-bottom: 15px;
@@ -134,7 +133,7 @@ background-color: #2774AE;
 
 position: absolute;
 
-top: 728px; 
+top: 728px;
 padding-left: 500px;
 padding-top: 15px;
 padding-bottom: 15px;
@@ -146,7 +145,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 36px;
 line-height: 41px;
- /* text-align: center; */
+/* text-align: center; */
 letter-spacing: 0.05em;
 
 color: #ffffff;
@@ -174,8 +173,10 @@ z-index: 2;
 
 .imageTwo {
 
-    height: 75%;
-    width: 75%;
+  height: 75%;
+  width: 75%;
+  background-color: #2774AE;
+  position: absolute;
 
 }
 
@@ -185,14 +186,14 @@ z-index: 2;
 color: white;
 position: absolute;
 top: 950px;
-padding-left: 950px;
+padding-left: 70%;
 font-family: 'Ubuntu';
 font-style: normal;
 font-weight: 20;
 font-size: 16px;
 line-height: 20px;
 letter-spacing: 0.05em;
-padding-bottom: 2px; 
+padding-bottom: 2px;
 
 
 
@@ -200,7 +201,7 @@ padding-bottom: 2px;
 
 
 .backgroundGray {
-    /* Rectangle 53 */
+  /* Rectangle 53 */
 
 position: absolute;
 width: 75%;
@@ -217,16 +218,16 @@ z-index: 1;
 
 
 .button {
-    /* border: none;
-    background-color: #e7e7e7; 
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 12px;
-    border: 2px solid #2774AE; */
+  /* border: none;
+  background-color: #e7e7e7;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+  border: 2px solid #2774AE; */
 
 
 
@@ -238,7 +239,7 @@ position: absolute;
 width: 265px;
 height: 61px;
 left: 1364px;
-top: 1595px; 
+top: 1595px;
 
 background: rgba(255, 255, 255, 0.75);
 border: 4px solid #2774AE;
@@ -248,10 +249,10 @@ border-radius: 40px;
 /* Login */
 
 position: absolute;
-width: 150px;
-height: 42px;
-left: 986px;
-top: 140px;
+width: 140px;
+height: 38px;
+left: 85%;
+top: 130px;
 
 font-family: 'Prompt';
 font-style: normal;
@@ -263,59 +264,59 @@ letter-spacing: 0.05em;
 color: #2774AE;
 
 
-    
-  }
-  .button:hover {
-    background-color: #79a1c0;
-    color: white;
-  }
+ 
+}
+.button:hover {
+  background-color: #79a1c0;
+  color: white;
+}
 
 
-  .box {
+.box {
 
-    padding: 0;
-    height: 30px;
-    position: relative;
-    left: 0;
-    outline: none;
-    border: 1px solid #e01616;
-    border-color: rgba(0, 0, 0, .15);
-    background-color: white;
-    font-size: 16px;
-    border-radius: 12px;
-    padding-left: 2px;
-    color: black;
-    margin-bottom: 10px;
-  }
+  padding: 0;
+  height: 30px;
+  position: relative;
+  left: 0;
+  outline: none;
+  border: 1px solid #e01616;
+  border-color: rgba(0, 0, 0, .15);
+  background-color: white;
+  font-size: 16px;
+  border-radius: 12px;
+  padding-left: 2px;
+  color: black;
+  margin-bottom: 10px;
+}
 
 
 
-  .circlePoint{
-    background-color: rgb(255, 255, 255);
-    padding: 10px;
-    border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    position: relative;
+.circlePoint{
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  position: relative;
 }
 
 .circlePointTwo{
-    background-color: rgb(255, 255, 255);
-    padding: 10px;
-    border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    right: 100px;
-    position: relative;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  right: 100px;
+  position: relative;
 }
 
 
 .createAccount {
-  /* Create Account */
+/* Create Account */
 
 position: absolute;
 height: 39px;
-left: 1045px;
+left: 91%;
 top: 105px;
 
 
@@ -330,3 +331,10 @@ letter-spacing: 0.05em;
 color: #FFD100;
 
 }
+
+.image2 {
+
+width: 700px;
+height: auto;
+}
+
