--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -4,6 +4,9 @@
   /*width: 700px;
   height: 105%;*/
 
+  /* width: 100%;
+  height: 70%; */
+
   border: 3px solid #2774ae;
   margin: 0% auto;
   border-radius: 50px;
@@ -13,6 +16,7 @@
   padding-top: 33px;
   /* padding-left: 5%; */
   /* padding-top: 1%; */
+  zoom: 0.80;
 }
 
 /* .TopBanner {
