--- a/bruinmatch-frontend/src/components/UserProfile.module.css
+++ b/bruinmatch-frontend/src/components/UserProfile.module.css
@@ -1,10 +1,10 @@
-/* html {
-  zoom: 0.75;
+html {
+  zoom: 0.8;
   /* Old IE only */
-/*-moz-transform: scale(0.8);
+  /*-moz-transform: scale(0.8);
       -webkit-transform: scale(0.8);
       transform: scale(0.8);*/
-/* } */
+}
 
 .FullFrame {
   background-color: #ffffff;
