--- a/bruinmatch-frontend/src/components/UserProfile.module.css
+++ b/bruinmatch-frontend/src/components/UserProfile.module.css
@@ -1,5 +1,7 @@
 html {
   zoom: 0.8;
+  height: 100%;
+  width: 100%;
   /* Old IE only */
   /*-moz-transform: scale(0.8);
       -webkit-transform: scale(0.8);
@@ -11,7 +13,7 @@ html {
   min-height: 100vh;
 
   top: 0px;
-  height: 3300px;
+  height: 3000px;
 }
 
 .TopBanner {
@@ -430,7 +432,7 @@ html {
   color: #525252;
 }
 
-.showalcohol {
+.showalchohol {
   position: absolute;
   left: 500px;
   top: 304px;
@@ -551,10 +553,10 @@ html {
   box-sizing: border-box;
 
   position: absolute;
-  width: 293px;
-  height: 90px;
+  width: 250px;
+  height: 70px;
   left: 1197px;
-  top: 1910px;
+  top: 1650px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 4px solid #7b7b7b;
@@ -567,13 +569,13 @@ html {
   position: absolute;
   width: 262.04px;
   height: 61.97px;
-  left: 1213.41px;
-  top: 1920.11px;
+  left: 1195px;
+  top: 1650px;
 
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
-  font-size: 50px;
+  font-size: 40px;
   line-height: 76px;
   text-align: center;
   letter-spacing: 0.05em;
