Changed layout of User Profile page and rounded edges on SignUp and EditProfile:

--- a/bruinmatch-frontend/src/components/SignUp.module.css
+++ b/bruinmatch-frontend/src/components/SignUp.module.css
@@ -1670,6 +1670,7 @@ color: rgba(82, 82, 82, 0.62);
   left: 310px;
   top: 852px;
   background-color: #efefef;
+  border-radius: 30px;
 }
 
 /* Sign Up */
